maj navigation, element, bloc

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="./style/css/app.css">
 </head>
 <body>
-    <nav>
-        <div class="image">
+    <nav class="bloc-navigation">
+        <div class="element-pdp">
             <img src="./images/avatar.jpeg" alt="sary">
         </div>
         <ul>
@@ -30,6 +30,183 @@
         Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
         Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
         tempore eligendi. Enim, totam ullam.
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p><p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        <p>
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+        Tenetur nostrum, placeat, a, minima autem natus nulla velit ullam adipisci enim qui recusandae cumque nesciunt iure 
+        tempore eligendi. Enim, totam ullam.
+        </p>
+        
+        
+
     </main>
 </body>
 </html>
